--- a/src/main/webapp/addproduct.html
+++ b/src/main/webapp/addproduct.html
@@ -30,8 +30,7 @@
 				<option value="ethnic">Ethnic</option>
 				<option value="kids">Kids</option>
 				<option value="electronics">Electronics</option>
-			</select> <br>
-			<br> <input type="button" value="Submit Record">
+			</select> <br> <br> <input type="button" value="Submit Record">
 
 
 		</div>
