--- a/src/main/webapp/adminpage.html
+++ b/src/main/webapp/adminpage.html
@@ -13,48 +13,12 @@
 
 		<h2>Admin Mangement Portal</h2>
 
-		<h3>Manage Products</h3>
-
 		<ul>
-			<li><a href="addproduct.html">Add Product</a></li>
-			<li><a href="local">Get Product by Id</a></li>
-			<li><a href="local">Update Product by Id</a></li>
-			<li><a href="local">Delete Product by Id</a></li>
 			<li><a href="allproducts.html">List all Products</a></li>
-
+			<li><a href="allusers.html">List all Users</a></li>
+			<li><a href="allPurchase.html">View all Purchase</a></li>
 		</ul>
 
 	</div>
-
-	<div>
-
-		<h3>Manage Users</h3>
-
-		<ul>
-			<li><a href="local">Register A User</a></li>
-			<li><a href="local">Find user by Id</a></li>
-			<li><a href="local">Update user details</a></li>
-			<li><a href="local">Delete User</a></li>
-			<li><a href="local">List all Users</a></li>
-
-		</ul>
-
-	</div>
-
-	<div>
-
-		<h3>Manage Purchase</h3>
-
-		<ul>
-			<li><a href="local">Add Purchase</a></li>
-			<li><a href="local">View all Purchase</a></li>
-
-		</ul>
-
-		<br> <a href="local">Change Password</a>
-
-	</div>
-
-
 </body>
 </html>
